# roundrobin-rs

./: .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: simple.rs  wrr_server.rs
examples/wrr_server/: Cargo.toml
examples/wrr_server/src/: main.rs
src/: lib.rs  rr.rs  wrr.rs
