[package]
name = "roundrobin"
version = "0.1.1"
authors = ["Yaoda Liu <shonenada@gmail.com>"]
license = "MIT"
description = "A simple roundrobin implementation."
repository = "https://github.com/shonenada/roundrobin-rs"
readme = "README.md"
homepage = "https://crates.io/crates/roundrobin"
edition = "2018"
categories = ["web-programming"]
keywords = ["roundrobin"]
include = ["src/**/*", "Cargo.toml", "docs/**/*", "LICENSE", "README.md"]

[dependencies]
log = "0.4"

[badges]
travis-ci = { repository = "shonenada/roundrobin-rs", branch="master" }
