[package]
name = "wrr_server"
version = "0.1.0"
authors = ["Yaoda Liu <shonenada@gmail.com>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.3"
rand = "0.7.2"
roundrobin = { path = "../../" }
